# judge-audit

./: .gitignore  ARTICLE.en.md  ARTICLE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: _build_notebook.py  audit_log.py  demo.ipynb  make_sample_log.py  run_benchmark.py
examples/data/: anchor_ids.json  eval_log.csv  eval_log.jsonl  pairwise_log.jsonl
judge_audit/: __init__.py  agreement.py  bias.py  calibrate.py  drift.py  io.py  report.py  synthetic.py
tests/: test_io.py  test_judge_audit.py
