[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "judge-audit"
version = "0.1.0"
description = "Audit the reliability of an LLM-as-judge eval pipeline: agreement, bias, drift, calibration."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nguyen Thu Thuy", email = "sophie.nguyenthuthuy@gmail.com" }]
keywords = ["llm", "evaluation", "llm-as-judge", "calibration", "reliability", "mlops"]
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["judge_audit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
